kubecon/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: demos
  name: frontend
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    demo: frontend
