kubecon/redis-policy.yaml
kind: NetworkPolicy
apiVersion: extensions/v1beta1 
metadata:
  namespace: demos
  name: redis
spec:
  # Apply this policy to redis pods.
  podSelector:
    matchLabels:
      demo: redis
  ingress:
    - from:
      # Allow traffic from frontend pods.
      - podSelector:
          matchLabels:
            demo: frontend
      ports:
      # But only on port 6379.
      - protocol: TCP
        port: 6379
